fix features section alignment

--- a/css/main.css
+++ b/css/main.css
@@ -59,9 +59,25 @@ button {
   margin: 0;
   margin-top: 15px;
 }
+
+/* FEATURES SECTION */
 .container {
+  /* width: 60%; */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+.grid {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 50px;
+}
+i {
+  color: orange;
+}
+
+.desc {
+  margin-left: 60px;
 }
